--- a/main.html
+++ b/main.html
@@ -8,6 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<table border="1px">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Roll number</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Mitul</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td>Pranjal</td>
+				<td>2</td>
+			</tr>
+			<tr>
+				<td>Lol</td>
+				<td>3</td>
+			</tr>
+		</tbody>
+	</table>
+
+	List of medias
+
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="imagine-something">
+		</li>
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
+		</li>
+		<li>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>			
+		</li>
+	</ol>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
